@@ -1,5 +1,6 @@
 2009-06-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* rss.py: Added support for "media content" elements.
 	* preferences.py (PreferencesTreeView): Dont' use markup on
 	  gtk.CellRendererText.
 	* base.py, flickr.py, picasa.py: Fixed issue #19. (Can't
